# context-graph-agent

./: .env.example  .gitignore  CODE_README.md  Makefile  README.md  calibration_results.json  pyproject.toml
.github/workflows/: ci.yml
Claude/Projects/context-graph-agent/: .env.example  README.md
Claude/Projects/context-graph-agent/.github/workflows/: ci.yml
Claude/Projects/context-graph-agent/apps/dashboard/: Dockerfile
Claude/Projects/context-graph-agent/docs/adr/: 0001-record-architecture-decisions.md  0002-event-driven-microservices.md  0006-qdrant-vectors.md  0007-grounded-llm-reasoning.md  0008-auth-and-tenancy.md  0010-gnn-urgency-scorer.md  0011-ray-distributed-ranking.md  README.md
Claude/Projects/context-graph-agent/docs/architecture/: sequence-diagrams.md
Claude/Projects/context-graph-agent/docs/data/: graph-model.md
Claude/Projects/context-graph-agent/docs/design/: api-and-events.md
Claude/Projects/context-graph-agent/infra/compose/: Dockerfile.service  docker-compose.yml
Claude/Projects/context-graph-agent/services/api-service/: Dockerfile  README.md
Claude/Projects/context-graph-agent/services/graph-service/: README.md
Claude/Projects/context-graph-agent/services/ingestion-service/: Dockerfile  README.md
Claude/Projects/context-graph-agent/services/llm-service/: Dockerfile
Claude/Projects/context-graph-agent/services/notification-service/: README.md  pyproject.toml
Claude/Projects/context-graph-agent/services/notification-service/src/cortex/services/notification/: __init__.py  engine.py  worker.py
Claude/Projects/context-graph-agent/services/ranking-service/: README.md
Claude/Projects/context-graph-agent/services/retrieval-service/: pyproject.toml
Claude/Projects/context-graph-agent/services/retrieval-service/src/cortex/services/retrieval/: config.py  http.py  main.py  service.py
Claude/Projects/context-graph-agent/tests/e2e/: test_pipeline.py
Claude/Projects/context-graph-agent/tests/services/: conftest.py  test_graph_service.py  test_ingestion_service.py  test_llm_service.py  test_ranking_service.py
Claude/Projects/context-graph-agent/tests/unit/: test_grounding.py  test_urgency_scoring.py
Claude/Projects/context-graph-agent/tools/scripts/: dump_openapi.py
Downloads/Image Segmentation Web App/backend/: CellDataset_with_Cellpose.ipynb
apps/dashboard/: Dockerfile  README.md  index.html  nginx.conf  package.json
apps/dashboard/app/: layout.tsx
apps/dashboard/e2e/: dashboard.spec.ts  package.json  playwright.config.ts
docs/: deployment.md  observability.md  onboarding.md  testing.md
docs/adr/: 0003-connector-framework.md  0004-repository-pattern.md  0005-neo4j-context-store.md  0006-qdrant-vectors.md  0007-grounded-llm-reasoning.md  0009-observability.md  0010-gnn-urgency-scorer.md
docs/api/openapi/: ingestion-service.json  llm-service.json  notification-service.json  ranking-service.json
docs/architecture/: architecture.md  folder-structure.md  services.md
docs/design/: hybrid-retrieval.md  urgency-scoring.md
f1-dashboard/: .gitignore  package-lock.json  package.json
f1-dashboard/src/: App.js
f1-dashboard/src/Backend/: data_loader.py  debug_races.py  f1-predictor-test.py  f1-predictor.py  f1_model.py  f1predictor_functions.py  predict_optimized.py
f1-dashboard/src/Frontend/: F1Dashboard.css  F1Dashboard.jsx
infra/compose/: docker-compose.yml
infra/k8s/: README.md  graph-service.yaml
infra/monitoring/grafana/dashboards/: cortex-pipeline.json  cortex-platform.json
infra/monitoring/grafana/provisioning/dashboards/: provider.yml
infra/monitoring/grafana/provisioning/datasources/: datasource.yml
infra/monitoring/otel/: otel-collector.yaml
infra/monitoring/prometheus/: prometheus.yml
infra/monitoring/prometheus/alerts/: cortex.rules.yml
infra/monitoring/tempo/: tempo.yaml
infra/neo4j/init/: 001_constraints.cypher
services/api-service/: pyproject.toml
services/api-service/src/cortex/services/api/: config.py
services/entity-service/: Dockerfile  README.md  pyproject.toml
services/entity-service/src/cortex/services/entity/: __init__.py  config.py  http.py  main.py  worker.py
services/graph-service/: Dockerfile  pyproject.toml
services/graph-service/src/cortex/services/graph/: __init__.py  config.py  http.py  worker.py
services/ingestion-service/: pyproject.toml
services/ingestion-service/src/cortex/services/ingestion/: __init__.py  base.py  http.py  ports.py  worker.py
services/ingestion-service/src/cortex/services/ingestion/connectors/: mock.py  real_sources.py
services/ingestion-service/src/cortex/services/ingestion/connectors/github/: __init__.py  client.py  connector.py  webhooks.py
services/llm-service/: Dockerfile  README.md  pyproject.toml
services/llm-service/src/cortex/services/llm/: __init__.py  config.py  main.py  reasoning.py  worker.py
services/llm-service/src/cortex/services/llm/graph/: __init__.py  engine.py  langgraph_pipeline.py  nodes.py  pipeline.py  state.py
services/notification-service/: Dockerfile
services/ranking-service/: Dockerfile  pyproject.toml
services/ranking-service/src/cortex/services/ranking/: __init__.py  config.py  main.py  scoring.py  worker.py
services/ranking-service/src/cortex/services/ranking/assets/: gnn_urgency.npz
services/ranking-service/src/cortex/services/ranking/gnn/: README.md  __init__.py  features.py  model.py  scorer.py  train.py
services/ranking-service/src/cortex/services/ranking/gnn/datasets/: __init__.py  servicenow.py
services/retrieval-service/: Dockerfile  README.md
tests/: conftest.py
tests/contract/: test_event_contract.py  test_repository_contract.py
tests/fixtures/: servicenow_incidents_sample.csv
tests/integration/: test_api.py  test_kafka_bus.py
tests/services/: test_entity_service.py  test_github_connector.py  test_gnn_real_dataset.py  test_gnn_scorer.py  test_notification_service.py  test_retrieval_service.py
tests/unit/: test_langgraph_pipeline.py  test_neo4j_helpers.py  test_reasoning_graph.py
tools/: pyproject.toml
tools/src/cortex/tools/synthetic/: scenario.py
(+36 files in other folders)
