[project]
name = "cortex-api-service"
version = "0.1.0"
description = "Cortex api-service: REST + WebSocket gateway over the pipeline stores."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6", "pydantic-settings>=2.2", "fastapi>=0.110", "uvicorn>=0.29",
    "cortex-contracts", "cortex-platform", "cortex-graph-sdk",
    "cortex-retrieval-service", "cortex-notification-service",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
