[project]
name = "cortex-ingestion-service"
version = "0.1.0"
description = "Cortex ingestion-service: connector runtime for enterprise sources."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6", "pydantic-settings>=2.2", "fastapi>=0.110", "uvicorn>=0.29",
    "httpx>=0.27", "cortex-contracts", "cortex-platform",
]

[project.optional-dependencies]
# GitHub App installation auth mints RS256-signed JWTs; only needed for the App auth
# strategy (PAT and OAuth need no crypto). kafka/otel mirror the platform extras.
github = ["pyjwt[crypto]>=2.8"]
kafka = ["confluent-kafka>=2.4"]
otel = ["opentelemetry-sdk>=1.25", "opentelemetry-exporter-otlp>=1.25"]

[project.scripts]
cortex-ingestion-service = "cortex.services.ingestion.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
