[project]
name = "cortex-notification-service"
version = "0.1.0"
description = "Cortex notification-service: rank, bundle, dedupe, route notifications."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6", "pydantic-settings>=2.2", "fastapi>=0.110", "uvicorn>=0.29",
    "cortex-contracts", "cortex-platform",
]

[project.scripts]
cortex-notification-service = "cortex.services.notification.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
