[project]
name = "cortex-retrieval-service"
version = "0.1.0"
description = "Cortex retrieval-service: hybrid graph+vector+keyword retrieval and embeddings."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6", "pydantic-settings>=2.2", "fastapi>=0.110", "uvicorn>=0.29",
    "cortex-contracts", "cortex-platform", "cortex-graph-sdk",
]

[project.scripts]
cortex-retrieval-service = "cortex.services.retrieval.main:main"

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
